--- a/login.html
+++ b/login.html
@@ -171,7 +171,7 @@
         localStorage.setItem('aas_auth', 'ok');
         localStorage.setItem('aas_user', u);
         // pequena pausa para feedback
-        setTimeout(() => location.href = 'homepage_arcade_anti_stress_index.html', 450);
+        setTimeout(() => location.href = 'index.html', 450);
       } else {
         err.style.display = 'block';
         // vibração suave (se suportado)
@@ -187,3 +187,4 @@
   </script>
 </body>
 </html>
+
